2004-07-21  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/config.py: Move out
	stuff from launcher.py to here, to prepare for further user interface changes

2004-07-16  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/controller.py: Clean up a little bit and add
	some documentation

	* tests: Add some basic tests for the controller class

2004-06-28  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/*: Add support for changing properties

2004-06-27  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/launcher.py (main): Add support for setuid to a
	username and renice.
	(Launcher): Add support to connect to another controller.
	(Launcher.setup): Move administrative interface to the same process

	* conf/sine-disc.conf (sine): Add nice for testing

2004-06-26  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/controller.py (FeedManager.feedReady): Add
	silly FIXME

	* flumotion/server/streamer.py: Support client connecting logging,
	including number of bytes sent to each client.

	* flumotion/server/launcher.py: Start adding nice levels.

	* flumotion/gui/adminclient.py (Window.update): Clean up

2004-06-25  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/streamer.py: New streamers and stuff

	* flumotion/server/admin.py (RemoteComponentView.__cmp__):
	Implement, check only name attribute for now

	* flumotion/gui/adminclient.py
	(AdminInterface.remote_componentAdded): Make it somewhat work to
	reconnect component and add some new columns

	* data/ui/admin.glade: Remove textview for now

2004-06-24  Johan Dahlin  <johan@gnome.org>

	* conf/complex.conf: New configuration, in preparation
	for guadec.

	* conf/ogg-test-theora-vorbis.conf: Move encoding of audio and
	video to separate components.

	* conf/camserv-relay.conf: Add a file streamer

	* flumotion/server/controller.py
	(ComponentPerspective.callRemote): Catch DeadReferenceError's

	* flumotion/server/launcher.py: updates for file/http streaming
