@@ -1,3 +1,11 @@
+2004-07-22  Johan Dahlin  <johan@gnome.org>
+
+	* flumotion/utils/log.py (log): Rework, add support for message
+	handlers, so we can send stuff over the wire at a later point
+
+	* flumotion/server/launcher.py (Launcher.load_config): Clean up
+	* flumotion/server/*: Clean up logging
+
 2004-07-21  Johan Dahlin  <johan@gnome.org>
 
 	* flumotion/server/config.py: Move out
